<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.confirmation.ConfirmationActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/allSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/all_set"
        android:textColor="@color/red"
        android:layout_marginTop="30dp"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/tick_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/allSet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/all_set" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pickUpMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_up_message"
        android:paddingHorizontal="25dp"
        android:paddingVertical="15dp"
        android:textColor="@color/pick_up"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tick_mark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/confirmationEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:textSize="15sp"
        android:text="@string/confirmation_email"
        android:textColor="@color/confirmation_email"
        app:layout_constraintTop_toBottomOf="@+id/pickUpMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/visitDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit_dashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmationEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>